# tauri-live2d

./: README.md  UPDATE_LOG.md  components.d.ts  install.json  live2d.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml  test-build.yml
demo/: index.html
public/assets/: live2d.min.js  live2dcubismcore.min.js
scripts/: release.mjs  tauriversion.mjs  updatelog.mjs  updater.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/live2d_server/: Cargo.toml
src-tauri/live2d_server/src/: config.rs  entity.rs  lib.rs  util.rs
src-tauri/src/: main.rs  utils.rs
src-tauri/src/app/: commands.rs  config.rs  mod.rs  mstruct.rs
src-tauri/src/live2d/: config.rs  menu.rs  mod.rs  mstruct.rs  my_command.rs  tray.rs
src-tauri/src/plugins/: autostart.rs  checkupdate.rs  mod.rs  modelserve.rs
src-tauri/web_server/: Cargo.toml
src-tauri/web_server/src/: lib.rs
src/assets/: waifu-tips.js  waifu.css
src/components/: Config.vue  Live2dConfig.vue  Model.vue  Models.vue
src/hooks/: useInterval.ts  useListenEvent.ts  useModel.ts  useUpdate.ts
src/live2d/: App.ts  index.vue
src/plugins/: autostart.ts  checkupdate.ts  index.ts  model_serve.ts  modelserve.ts
src/types/: index.d.ts
src/util/: index.ts
