[package]
authors = ["you"]
description = "A Tauri App For Live2d"
edition = "2021"
license = "MIT"
name = "live2d"
repository = "https://github.com/itxve/tauri-live2d"
rust-version = "1.65.0"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2.1", features = [] }

[dependencies]
anyhow = "1.0.66"
auto-launch = "0.4.0"
glob = "0.3.0"
log = "0.4.17"
notify = {version = "5.0.0", features = ["serde"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.2.3", features = ["api-all", "macos-private-api", "system-tray", "updater"] }
thiserror = "1.0"
tokio = {version = "1.23.0", features = ["macros"] }
web_server= {path = "./web_server"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = "z"
strip = true
