[package]
name = "live2d_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
serde_json = "1.0.89"
axum-extra = "0.4.2"
serde = { version = "1.0.100", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs", "trace","cors"] }
rand = "0.8.5"