[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
axum = { version = "0.7.5", features = ["ws"] }
tower = {version = "0.4", features = ["util"] }
tower-http = {version = "0.5.0", features = ["fs", "trace", "cors"] }
tokio = { version = "1.0", features = ["full"] }
serde = "1"